fix overflow property in mobile

--- a/styles.css
+++ b/styles.css
@@ -273,6 +273,7 @@ video {
 
     html,body {
         overflow-x: hidden;
+        position: relative;
     }
 
     .logo {
